[Perf] Updated dependencies
Co-authored-by: Roger Rodrigues <rrsilvabr@yahoo.com.br>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@angular/common": "^20.1.4",
     "@angular/compiler": "^20.1.4",
     "@angular/core": "^20.1.4",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/platform-browser-dynamic": "^20.1.4",
     "@angular/router": "^20.1.4",
     "@apollo/client": "^3.13.9",
     "apollo-angular": "^11.0.0",
+    "firebase": "^12.0.0",
     "graphql": "^16.11.0",
     "graphql-ws": "^6.0.6",
     "rxjs": "~7.8.0",
@@ -31,6 +33,7 @@
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.4",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
