--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.1.4",
+    "@angular/cdk": "^20.1.4",
     "@angular/common": "^20.1.4",
     "@angular/compiler": "^20.1.4",
     "@angular/core": "^20.1.4",
     "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.1.4",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/platform-browser-dynamic": "^20.1.4",
     "@angular/router": "^20.1.4",
