--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
-    name: backend
+    name: live-quizzer
+
+  main:
+    web-application-type: reactive
+
+  graphql:
+    http:
+      path: /graphql
+    websocket:
+      path: /graphql
 
   security:
     oauth2:
@@ -23,16 +32,3 @@ spring:
     redis:
       host: localhost
       port: 6379
-
-  graphql:
-    http:
-      path: /graphql
-
-    websocket:
-      path: /graphql
-
-    cors:
-      allowed-origins: "http://localhost:4200"
-      allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-      allowed-headers: "*"
-      allow-credentials: true
